--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ The auto margin left and right keeps the body centered on the screen.-->
             <a href="weekOne/lesson1.html">Lesson One</a><br>
             <a href="weekOne/lesson2.html">Lesson Two</a><br>
             <a href="weekTwo/lesson3.html">Lesson Three</a><br>
+            <a href="weekTwo/lesson4.html">Lesson Four</a><br>
+            <a href="https://codepen.io/JakeHellmann/pen/maOydo">Jake's Jamin Clock Code Pen</a><br>
         </div>
     </body>
 </html>
