--- a/weekOne/lesson2.html
+++ b/weekOne/lesson2.html
@@ -23,6 +23,7 @@
                 <li><a href="lesson1.html">Lesson One</a></li>
                 <li><a href="lesson2.html">Lesson Two</a></li>
                 <li><a href="../weekTwo/lesson3.html">Lesson Three</a></li>
+                <li><a href="../weekTwo/lesson4.html">Lesson Four</a></li>
             </ul>
         </div>
 <!--       Main content where the external favorite links.  A total of 5 should be listed-->
@@ -33,10 +34,11 @@
                 <li><a href="https://www.baseballexpress.com/catalog/product.jsp?productId=133063">Baseball Express</a></li>
                 <li><a href="http://www.instagram.com/" target="_blank">Instagram</a></li>
                 <li><a href="https://app.schoology.com/home/recent-activity">Schoology</a></li>
-                 <li><a href="https://www.evo.com/">Evo</a></li>
+                <li><a href="https://www.evo.com/">Evo</a></li>
                 <li><a href="https://www.google.com/search?q=snake+game&rlz=1C1PRFI_enUS810US810&oq=snake&aqs=chrome.0.69i59j69i57j0l4.3196j0j7&sourceid=chrome&ie=UTF-8">Snake Game</a></li>
+                <li><a href="https://www.coolmathgames.com/0-bear-on-a-scooter">Bear on scooter</a></li>
             </ol>
-                <iframe ng-non-bindable="" frameborder="0" hspace="0" marginheight="0" marginwidth="0" scrolling="no" style="width: 376px; height: 380px;" tabindex="0" vspace="0" width="400" class="gb_fc" allowtransparency="true" aria-hidden="true" id="I0_1544216823843" name="I0_1544216823843" src="https://notifications.google.com/u/0/widget?sourceid=1&amp;hl=en&amp;origin=https%3A%2F%2Fwww.google.com&amp;uc=1&amp;usegapi=1&amp;jsh=m%3B%2F_%2Fscs%2Fabc-static%2F_%2Fjs%2Fk%3Dgapi.gapi.en.CUp85wbT4DI.O%2Frt%3Dj%2Fd%3D1%2Frs%3DAHpOoo-XBQda2DFvo9hxbj_dGnCV84SJMA%2Fm%3D__features__#pid=1&amp;_methods=onError%2ConInfo%2ChideNotificationWidget%2CpostSharedMessage%2Creauth%2CsetNotificationWidgetHeight%2CsetNotificationWidgetSize%2CswitchTo%2CnavigateTo%2CsetNotificationText%2CsetNotificationAnimation%2CgetNotificationText%2CvalidateUser%2C_ready&amp;id=I0_1544216823843&amp;_gfid=I0_1544216823843&amp;parent=https%3A%2F%2Fwww.google.com&amp;pfname=&amp;rpctoken=14393542"></iframe>
+                
         </div>
 
     </div>
